# ChangeLog for app-cdr/brasero
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.26 2007/10/10 19:27:34 corsair Exp $

  10 Oct 2007; Markus Rothe <corsair@gentoo.org> brasero-0.6.1.ebuild:
  Added ~ppc64; bug #189993

  09 Oct 2007; Lars Weiler <pylon@gentoo.org> brasero-0.6.1.ebuild:
  stable ppc, bug #189991

  07 Oct 2007; Christian Faulhammer <opfer@gentoo.org> brasero-0.6.1.ebuild:
  stable x86, bug 189991

*brasero-0.6.1 (25 Aug 2007)

  25 Aug 2007; <metalgod@gentoo.org> +brasero-0.6.1.ebuild:
  Version Bump.

  24 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  brasero-0.6.0.ebuild:
  ppc stable, bug #189991

  24 Aug 2007; <metalgod@gentoo.org> brasero-0.6.0.ebuild:
  Fix USE=libnotify on the ebuild. Thanks to Nirbheek Chauhan
  <nirbheek.chauhan@gmail.com> on Bug #189779.

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  brasero-0.5.2.ebuild:
  ppc stable, bug #185630

  25 Jul 2007; Christian Faulhammer <opfer@gentoo.org> brasero-0.5.2.ebuild:
  stable x86, bug 185630

  19 Jul 2007; Christoph Mende <angelos@gentoo.org> brasero-0.5.2.ebuild:
  Stable on amd64 wrt bug #185630

  17 Jul 2007; <metalgod@gentoo.org> brasero-0.5.2.ebuild,
  -brasero-0.5.90.ebuild, brasero-0.6.0.ebuild:
  Properly install gconf schema. Closes bug #174662 thanks to 
  Luca Marturana <lucamarturana@gmail.com>. Removed older 
  versions.

*brasero-0.6.0 (11 Jul 2007)
*brasero-0.5.90 (11 Jul 2007)

  11 Jul 2007; Steve Dibb <beandog@gentoo.org> +brasero-0.5.90.ebuild,
  +brasero-0.6.0.ebuild:
  Version bump

  08 Apr 2007; Joseph Jezak <josejx@gentoo.org> brasero-0.5.2.ebuild:
  Marked ~ppc for bug #168560.

*brasero-0.5.2 (27 Feb 2007)

  27 Feb 2007; Luis Medinas <metalgod@gentoo.org> +brasero-0.5.2.ebuild:
  Version Bump. New Homepage. Remove older this is a bug fix release. Drop
  ~ppc keyword due libisofs lack of keyword for this arch.
