@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/Attic/brasero-0.6.1.ebuild,v 1.4 2007/10/10 19:27:34 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/Attic/brasero-0.6.1.ebuild,v 1.5 2007/10/18 13:24:51 angelos Exp $
 
 inherit gnome2 gnome.org
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/projects/brasero"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ppc ~ppc64 x86"
+KEYWORDS="amd64 ppc ~ppc64 x86"
 IUSE="beagle dvd gdl libburn libnotify totem nls"
 
 RDEPEND=">=x11-libs/gtk+-2.10
@@ -50,7 +50,7 @@ USE_DESTDIR="1"
 
 src_install() {
 	gnome2_src_install
-	use nls || rm -rf ${D}/usr/share/locale
+	use nls || rm -rf "${D}"/usr/share/locale
 }
 
 pkg_postinst() {
