@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/brasero
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.26 2007/10/10 19:27:34 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.27 2007/10/18 13:24:51 angelos Exp $
+
+  18 Oct 2007; Christoph Mende <angelos@gentoo.org> brasero-0.6.1.ebuild:
+  Stable on amd64 wrt bug #189991
 
   10 Oct 2007; Markus Rothe <corsair@gentoo.org> brasero-0.6.1.ebuild:
   Added ~ppc64; bug #189993
